<resources>
    <string name="app_name">HistoSitesMaps</string>
    <string name="title_activity_maps">Map</string>
    <string name="form_1">Remplir "Adresse" OU "LatLng"</string>
    <string name="form_2">Adresse</string>
    <string name="form_3">Latitude</string>
    <string name="form_4">Longitude</string>
    <string name="form_5">Nom du site</string>
    <string name="form_6">Ajouter le site</string>
    <string name="form_7">URL de la photo</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="action_settings">Settings</string>
</resources>
